Opened 11 years ago

Closed 11 years ago

#5036 closed defect (fixed)

Compilation failure on cygwin64

Reported by: kevmitch Owned by:
Priority: normal Component: undetermined
Version: git-master Keywords:
Cc: Blocked By:
Blocking: Reproduced by developer: no
Analyzed by developer: no

Description

On cygwin, the new SChannel SSP TLS protocol code introduced in
4c8d86eb18e2fc8fcd5819a33599422454fdeff8 causes the compile to fail.

the compilation procedure is

git clone https://github.com/FFmpeg/FFmpeg.git
mkdir ffmpeg_build && cd ffmpeg_build
../ffmpeg/configure 
make 2>&1 | tee make.log

The first error is

In file included from /usr/include/w32api/sspi.h:10:0,
                 from /usr/include/w32api/security.h:33,
                 from /home/kevmitch/mpv-build/ffmpeg/libavformat/tls_schannel.c:31:
/usr/include/w32api/ntsecapi.h:15:11: error: unknown type name ‘LONG’
   typedef LONG NTSTATUS,*PNTSTATUS;

Full config.log and a log of stdout/stderr from make are attached.

Attachments (3)

config.log (281.9 KB ) - added by kevmitch 11 years ago.
log generated by ../ffmpeg/configure
make.log (446.7 KB ) - added by kevmitch 11 years ago.
log generated by make 2>&1 | tee make.log
0001-avformat-add-windows.h-to-SChannel-SSP-TLS-code.patch (626 bytes ) - added by kevmitch 11 years ago.
patch that "works for me"

Download all attachments as: .zip

Change History (5)

by kevmitch, 11 years ago

Attachment: config.log added

log generated by ../ffmpeg/configure

by kevmitch, 11 years ago

Attachment: make.log added

log generated by make 2>&1 | tee make.log

by kevmitch, 11 years ago

patch that "works for me"

comment:1 by Carl Eugen Hoyos, 11 years ago

Version: unspecifiedgit-master

Please send your patch to the FFmpeg development mailing list where it can be discussed.

comment:2 by Hendrik, 11 years ago

Resolution: fixed
Status: newclosed
Note: See TracTickets for help on using tickets.