avformat: add windows.h to SChannel SSP TLS code

This fixes building on cygwin
Fixes ticket #5036